force-app/main/default/objects/ItemCarteira__c/ItemCarteira__c.object-meta.xml
<CustomObject>
    <label>Item de Carteira</label>
    <nameField>
        <displayFormat>ITC{000000}</displayFormat>
        <label>Nome de Item de Carteita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de Carteira</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>