force-app/main/default/objects/ItemCarteira__c/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <label>Mercado</label>
    <referenceTo>Mercado__c</referenceTo>
    <relationshipLabel>Itens de Carteira</relationshipLabel>
    <relationshipName>ItensCarteira</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>