force-app/main/default/objects/ItemCarteira__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Quantidade atual do ativo primário do mercado na carteira</description>
    <inlineHelpText>Quantidade de Ativo  primário X Cotação Atual</inlineHelpText>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>