force-app/main/default/objects/ItemCarteira__c/fields/ValorInvestido__c.field-meta.xml
<CustomField>
    <fullName>ValorInvestido__c</fullName>
    <description>Valor total Investido ( Moeda Secundária)</description>
    <label>Valor Investido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>